<resources>
    <string name="app_name">Simple Weather</string>
    <string name="title_home">Home</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_settings">Settings</string>
    <string name="title_refresh">Refresh</string>
    <string name="mock_date">month, 01, 2020</string>
    <string name="mock_location">Montreal, Canada</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="uv_index">UV index</string>
    <string name="visibility">Visibility</string>
    <string name="avatar">avatar</string>
    <string name="average_uv_index">Average UV index</string>
    <string name="mock_text_medium">Medium</string>
    <string name="mock_zero">0</string>
    <string name="mock_day_of_week">Friday</string>
    <string name="since_yesterday">since yesterday</string>
    <string name="mock_percent">+ 13%</string>
    <string name="graphic">graph</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
