<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@drawable/gradient_fragment"
        android:padding="@dimen/padding_for_main_units">

    <TextView
            android:id="@+id/current_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_for_main_units"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/mock_date"
            android:textColor="@color/text_muted"
            android:textSize="@dimen/font_small"/>

    <TextView
            android:id="@+id/current_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/current_date"
            app:layout_constraintStart_toStartOf="@id/current_date"
            android:text="@string/mock_location"
            android:textColor="@color/text_main"
            android:textSize="@dimen/font_normal"/>

    <ImageView
            android:id="@+id/avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/padding_for_main_units"
            app:layout_constraintTop_toTopOf="@id/current_date"
            app:layout_constraintBottom_toBottomOf="@id/current_location"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/avatar"
            android:contentDescription="@string/avatar"/>

    <Button
            android:id="@+id/humidity_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/padding_for_main_units"
            android:layout_marginTop="@dimen/margin_to_the_edge"
            android:layout_marginEnd="@dimen/space_between"
            android:layout_marginBottom="@dimen/space_between"
            android:padding="@dimen/space_between"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/current_location"
            app:layout_constraintBottom_toTopOf="@id/uv_index_button"
            app:layout_constraintEnd_toStartOf="@id/pressure_button"
            android:background="@drawable/oval_button"
            android:drawableTop="@drawable/ic_humidity"
            android:text="@string/humidity"
            android:textSize="@dimen/font_small"
            android:textColor="@color/text_main"
            android:textAllCaps="false"/>

    <Button
            android:id="@+id/pressure_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/padding_for_main_units"
            android:layout_marginTop="@dimen/margin_to_the_edge"
            android:layout_marginStart="@dimen/space_between"
            android:layout_marginBottom="@dimen/space_between"
            android:padding="@dimen/space_between"
            app:layout_constraintStart_toEndOf="@id/humidity_button"
            app:layout_constraintTop_toBottomOf="@id/current_location"
            app:layout_constraintBottom_toTopOf="@id/visibility_button"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/oval_button"
            android:drawableTop="@drawable/ic_pressure"
            android:text="@string/pressure"
            android:textSize="@dimen/font_small"
            android:textColor="@color/text_main"
            android:textAllCaps="false"/>

    <Button
            android:id="@+id/uv_index_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/padding_for_main_units"
            android:layout_marginTop="@dimen/space_between"
            android:layout_marginEnd="@dimen/space_between"
            android:layout_marginBottom="@dimen/margin_to_the_edge"
            android:padding="@dimen/space_between"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/humidity_button"
            app:layout_constraintEnd_toStartOf="@id/visibility_button"
            app:layout_constraintBottom_toTopOf="@id/mock_recycler_view"
            android:background="@drawable/oval_button"
            android:drawableTop="@drawable/ic_uvindex"
            android:text="@string/uv_index"
            android:textSize="@dimen/font_small"
            android:textColor="@color/text_main"
            android:textAllCaps="false"/>

    <Button
            android:id="@+id/visibility_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/padding_for_main_units"
            android:layout_marginTop="@dimen/space_between"
            android:layout_marginStart="@dimen/space_between"
            android:layout_marginBottom="@dimen/margin_to_the_edge"
            android:padding="@dimen/space_between"
            app:layout_constraintStart_toEndOf="@id/uv_index_button"
            app:layout_constraintTop_toBottomOf="@id/pressure_button"
            app:layout_constraintBottom_toTopOf="@id/mock_recycler_view"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/oval_button"
            android:drawableTop="@drawable/ic_visibility"
            android:text="@string/visibility"
            android:textSize="@dimen/font_small"
            android:textColor="@color/text_main"
            android:textAllCaps="false"/>

    <ImageView
            android:id="@+id/mock_recycler_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/mock_recycler_view"
            app:layout_constraintTop_toBottomOf="@id/uv_index_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/graphic"/>

</androidx.constraintlayout.widget.ConstraintLayout>